--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ]
 }
