--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,15 @@
       ]
     },
     {
+      "source": "/_next/image*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/static/:path*",
       "headers": [
         {
