fix: correct source path for image headers in vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       ]
     },
     {
-      "source": "/_next/image*",
+      "source": "/_next/image",
       "headers": [
         {
           "key": "Cache-Control",
