--- a/package.json
+++ b/package.json
@@ -16,19 +16,13 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@base-ui/react": "^1.1.0",
     "@marsidev/react-turnstile": "^1.4.2",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.563.0",
     "next": "16.1.6",
-    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.9.1",
-    "shadcn": "^3.8.4",
-    "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
